--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>Window not found</h1>
+    <h1>404 not found</h1>
     <p>Move along, nothing to see here.</p>
 </body>
 </html>
