--- a/404.html
+++ b/404.html
@@ -53,17 +53,42 @@
     </style>
 </head>
 <body>
-    <h1>Window not found</h1>
-    <p>Move along, nothing to see here.</p>
+<h1>Window not found</h1>
+<p>Move along, nothing to see here.</p>
+<div id="ytsound">
+    <div id="vidcover"
+         style="position: absolute; width: 300px; height: 250px; background-color: white; text-align: center;">
+        <div style="position:relative; top:20px">
+            <div style="color:#999999; font-size:14px">
+            </div>
+            <div style="margin-top:35px">
 
+            </div>
+            <div style="margin-top:45px">
+            </div>
+        </div>
+    </div>
+    <iframe id="ytframe" width="300" height="250"
+            src="//www.youtube.com/embed/_RqV73XIcZU?autoplay=1&amp;loop=1&amp;playlist=enMReCEcHiM&amp;showinfo=0&amp;start=0"
+            frameborder="0" allowfullscreen="" style="float:left;"></iframe>
+    <div id="ythldiv" style="display:none; text-align:right; font-size:11px; margin-bottom:-15px">
+    </div>
+</div>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-93290802-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-93290802-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 </body>
