Added metadata tags

--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Azure Window</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="In search of the Azure Window that's located in Gozo, the sister island of Malta."/>
+    <meta name="keywords" content="Azure, window, Azure Window, Gozo, Malta, tribute" />
     <style>
 
         * {
